tests/bad/frontend/newBasicType.latte
int main() {
	int x = new A;
	return 0;
}
